@@ -298,6 +298,7 @@ struct Shell_s
 	char		*comdiv;	/* points to sh -c argument */
 	char		*prefix;	/* prefix for compound assignment */
 	sigjmp_buf	*jmplist;	/* longjmp return stack */
+	int		oldexit;	/* saves pre-trap exit status for 'exit' default in trap actions */
 	pid_t		bckpid;		/* background process id */
 	pid_t		cpid;
 	pid_t		spid; 		/* subshell process id */
@@ -306,7 +307,7 @@ struct Shell_s
 	int		topfd;
 	int		savesig;
 	unsigned char	*sigflag;	/* pointer to signal states */
-	char		intrap;
+	char		intrap;		/* set while executing a trap action */
 	char		forked;
 	char		binscript;
 	char		funload;
